--- a/Spectrometer_7263-IR/platformio.ini
+++ b/Spectrometer_7263-IR/platformio.ini
@@ -12,3 +12,5 @@
 platform = atmelsam
 board = seeed_wio_terminal
 framework = arduino
+lib_deps = bblanchon/ArduinoJson@^6.17.3
+monitor_speed = 115200
